Fixed missing scrollbar at contact-list under 900px

--- a/src/app/layouts/app-layout/app-layout.scss
+++ b/src/app/layouts/app-layout/app-layout.scss
@@ -24,10 +24,12 @@
 
   .main {
     padding-bottom: 80px;
+    min-height: 0;
   }
 
   .content {
     height: calc(100% - 80px);
+    min-height: 0;
   }
 }
 
