--- a/src/app/shared/components/header/header.scss
+++ b/src/app/shared/components/header/header.scss
@@ -132,7 +132,7 @@
 
   .header-logo-mobile {
     display: block;
-    height: 36px;
+    height: 39px;
   }
 
   .header-logo-desktop {
